Se agrega empleados
Se agrega migrador, modelo y controller para empleados con los metodos GET, PUT, POST y DELETE con documentacion swagger.
